# template

./: README.md  pyproject.toml
src/: demo.ipynb
template/: demo.ipynb  demo.py
tests/: test_demo.py
