[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["Zhongtao Miao <zhongtao.miao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.10"
torch = { url = "https://download.pytorch.org/whl/cu116/torch-1.12.0%2Bcu116-cp38-cp38-win_amd64.whl", markers="sys_platform == 'win32'"}
torchaudio = { url = "https://download.pytorch.org/whl/cu116/torchaudio-0.12.0%2Bcu116-cp38-cp38-win_amd64.whl", markers="sys_platform == 'win32'"}
torchvision = { url = "https://download.pytorch.org/whl/cu116/torchvision-0.13.0%2Bcu116-cp38-cp38-win_amd64.whl", markers="sys_platform == 'win32'"}
torchtext = { url = "https://download.pytorch.org/whl/torchtext-0.13.0-cp38-cp38-win_amd64.whl", markers="sys_platform == 'win32'"}

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
